# gamedev-dl

./: .gitignore  README.md  pyproject.toml
poetry_py_gamedev_dl/: __main__.py  gamedev-dl.spec
tests/: test_poetry_py_gamedev_dl.py
