[tool.poetry]
name = "poetry-py-gamedev-dl"
version = "1.0.0"
description = ""
authors = ["Josh <jm8hjkl@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
requests = "^2.26.0"
beautifulsoup4 = "^4.10.0"
pywin32 = "^302"
Gooey = "^1.0.8"
lxml = "^4.6.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.6.0"
pyinstaller = "^4.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
